--- a/css/imc.css
+++ b/css/imc.css
@@ -92,10 +92,10 @@ textarea {
     color: #000;
     font-size: 16px;
     font-weight: bold;
-    margin-top: 5%;
+    margin-top: 10%;
     margin-bottom: 5%;
     resize: none;
-    height: 100px;
+    height: 10vh;
     display: flex;
 }
 
@@ -118,10 +118,16 @@ footer{
     .navbar .navbar-collapse {
       padding-top: 30px;
     }
-  
+
+    #btn_calcular {
+      display: flex;
+      align-items: center;
+      margin: 0 30%;
+    }
+
     h1 {
       line-height: 48px;
-      font-size: 39px;
+      font-size: 9vw;
     }
   
     footer {
@@ -130,6 +136,6 @@ footer{
     }
     footer .cp {
       text-align: center;
-      margin-top: 15px;
+      margin-top: 10%;
     }
   }
