--- a/css/imc.css
+++ b/css/imc.css
@@ -1,141 +1,151 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins");
 
-*{
-    font-family: 'Poppins', sans-serif;
+* {
+  font-family: 'Poppins', sans-serif;
 }
+
 .flex {
-    display: flex;
-    flex-direction: column;
-  }
-  
+  display: flex;
+  flex-direction: column;
+}
+
 .Container {
-    width: 40vw;
-    margin: 50px auto;
-    padding: 20px;
-    border-radius: 10px;
-    margin-top: 185px;
-    background-color: #090909;
-    border: 1px solid #ff0000;
+  width: 40vw;
+  margin: 50px auto;
+  padding: 20px;
+  border-radius: 10px;
+  margin-top: 185px;
+  background-color: #090909;
+  border: 1px solid #ff0000;
 }
 
 h1 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 28px;
-    font-weight: bold;
-    margin-bottom: 2%;
-    text-align: center;
-    color: #FF0000;
+  font-family: 'Poppins', sans-serif;
+  font-size: 28px;
+  font-weight: bold;
+  margin-bottom: 2%;
+  text-align: center;
+  color: #FF0000;
+}
+
+
+.navbar-nav li a:active {
+  color: #ff0000;
 }
 
 h2 {
-    font-family: 'Poppins', sans-serif;
-    font-size: 18px;
-    font-weight: bold;
-    margin-bottom: 2%;
-    color: #fff;
+  font-family: 'Poppins', sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  margin-bottom: 2%;
+  color: #fff;
 }
 
 .input_campo {
-    font-family: 'Poppins', sans-serif;
-    margin-bottom: 20px;
-    display: flex;
-    flex-direction: column;
+  font-family: 'Poppins', sans-serif;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
 }
 
 input[type="number"] {
-    font-family: 'Poppins', sans-serif;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    background-color: #f1f1f1;
-    color: #333;
-    font-size: 16px;
-    font-weight: bold;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  font-family: 'Poppins', sans-serif;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #f1f1f1;
+  color: #333;
+  font-size: 16px;
+  font-weight: bold;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
 }
 
 #btn_calcular {
-    background-color: #ff0000;
-    font-family: 'Poppins', sans-serif;
-    color: #fff;
-    padding: 15px 15px;
-    border-radius: 300px;
-    border: none;
-    font-size: 18px;
-    font-weight: bold;
-    margin-left: 40%;
-    margin-right: 40%;
-    cursor: pointer;
-    transition: 0.2s;
-    display: flex;
-    align-items: center;
-    border: 3px solid #FF0000;
-    border-radius: 30px;
+  background-color: #ff0000;
+  font-family: 'Poppins', sans-serif;
+  color: #fff;
+  padding: 15px 15px;
+  border-radius: 300px;
+  border: none;
+  font-size: 18px;
+  font-weight: bold;
+  margin-left: 40%;
+  margin-right: 40%;
+  cursor: pointer;
+  transition: 0.2s;
+  display: flex;
+  align-items: center;
+  border: 3px solid #FF0000;
+  border-radius: 30px;
 }
 
 
 #btn_calcular:hover {
-    transform: scale(1.1);
-    background: #090909;
-    color: #ff0000;
-    border: 3px solid #FF0000;
-    border-color: #ff0000;
+  transform: scale(1.1);
+  background: #090909;
+  color: #ff0000;
+  border: 3px solid #FF0000;
+  border-color: #ff0000;
 }
 
 textarea {
-    font-family: 'Poppins', sans-serif;
-    width: 100%;
-    padding: 10px;
-    border-radius: 5px;
-    border: none;
-    background-color: #f1f1f1;
-    color: #000;
-    font-size: 16px;
-    font-weight: bold;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    resize: none;
-    height: 10vh;
-    display: flex;
+  font-family: 'Poppins', sans-serif;
+  width: 100%;
+  padding: 10px;
+  border-radius: 5px;
+  border: none;
+  background-color: #f1f1f1;
+  color: #000;
+  font-size: 16px;
+  font-weight: bold;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  resize: none;
+  height: 10vh;
+  display: flex;
 }
 
-footer{
-    width: 100%;
+footer {
+  width: 100%;
 }
 
 @media (max-width: 575px) {
-    .Container{
-        width: 80%;
-    }
-    .container {
-      padding: 0 25px;
-    }
-    .navbar-brand{
-      width: 70% !important;
-      margin-top: 5%;
-      margin-left: 10%;
-    }
-    .navbar .navbar-collapse {
-      padding-top: 30px;
-    }
-
-    #btn_calcular {
-      display: flex;
-      align-items: center;
-      margin: 0 30%;
-    }
-
-    h1 {
-      line-height: 48px;
-      font-size: 9vw;
-    }
-  
-    footer {
-      width: 100%;
-      text-align: center;
-    }
-    footer .cp {
-      text-align: center;
-      margin-top: 10%;
-    }
+  .Container {
+    width: 80%;
   }
+
+  .container {
+    padding: 0 25px;
+  }
+
+  .navbar-brand {
+    width: 70% !important;
+    margin-top: 5%;
+    margin-left: 10%;
+  }
+
+  .navbar .navbar-collapse {
+    padding-top: 30px;
+  }
+
+  #btn_calcular {
+    display: flex;
+    align-items: center;
+    margin: 0 30%;
+  }
+
+  h1 {
+    line-height: 48px;
+    font-size: 9vw;
+  }
+
+  footer {
+    width: 100%;
+    text-align: center;
+  }
+
+  footer .cp {
+    text-align: center;
+    margin-top: 10%;
+  }
+}
